<resources>
    <string name="app_name">Geometry Calculator</string>
    <string name="toast_message">Welcome!</string>
    <string name="triangle_calculator">Geometry Calculator</string>
    <string name="tap_to_know_me">Want to Know The Developer?</string>
    <string name="calculate">Calculate</string>
    <string name="input_L_P_R">Length / Pedestal / Diameter</string>
    <string name="input_W_H">Width / Height</string>
    <string name="_2019_deviko_kelvin_all_rights_reserved">© 2019 Deviko Kelvin | All Rights Reserved</string>
    <string name="version">build 0.1.9192019-2358_insider</string>
    <string name="button_label_countTriangle">Count Triangle!</string>
    <string name="button_label_count_square">Count Square!</string>
    <string name="button_label_count_circle">Count Circle!</string>
</resources>
